--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta property="og:image" content="https://loot-dev.s3-us-west-1.amazonaws.com/Screen+Shot+2020-09-15+at+3.44.37+PM.png">
+
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/root.css">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
