--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta property="og:image" content="https://loot-dev.s3-us-west-1.amazonaws.com/Screen+Shot+2020-09-15+at+3.44.37+PM.png">
+    <meta property="og:image" content="https://twinkle-dev.s3-us-west-1.amazonaws.com/rsz_1screen_shot_2020-09-15_at_34437_pm.png">
 
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/root.css">
