--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta property="og:image" content="https://twinkle-dev.s3-us-west-1.amazonaws.com/rsz_1screen_shot_2020-09-15_at_34437_pm.png">
-
+    <!-- <meta property="og:image" content="https://twinkle-dev.s3-us-west-1.amazonaws.com/rsz_1screen_shot_2020-09-15_at_34437_pm.png"> -->
+    
+    <meta property="og:image" content="https://www.lootncraft.net/public/thumbnail.png">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.lootncraft.net/#/">
+    <meta property="og:title" content="LOOT">
+    <meta property="og:description" content="Recursive recipes for your LOOT!">
+    
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="/stylesheets/root.css">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
