--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <!-- <meta property="og:image" content="https://twinkle-dev.s3-us-west-1.amazonaws.com/rsz_1screen_shot_2020-09-15_at_34437_pm.png"> -->
     
-    <meta property="og:image" content="https://www.lootncraft.net/public/thumbnail.png">
+    <meta property="og:image" content="https://www.lootncraft.net/thumbnail.png">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.lootncraft.net/#/">
     <meta property="og:title" content="LOOT">
